
= rufus-jig CHANGELOG.txt


== rufus-jig - 1.0.1    not yet released

- couch #get('docname', :attchments => true)


== rufus-jig - 1.0.0    released 2010/12/08

- Couch #all, #query, #query_for_docs, #bulk_put and #bulk_delete
- Rufus::Jig.parse_uri now identifies the #fragment
- conditional GET on by default
- switched from test/unit to rspec


== rufus-jig - 0.1.23    released 2010/10/01

- net-http-persistent 1.4 which contains the shutdown_in_all_threads patch
  by Torsten Schoenebaum


== rufus-jig - 0.1.22    released 2010/09/30

- close methods are back
- basic authentication added
- net-http-persistent integration
- Rufus::Jig.parse_uri(s), uri now has scheme


== rufus-jig - 0.1.21    released 2010/09/21

- fixed port.to_i minor issue
- caching is only for GET !


== rufus-jig - 0.1.20    released 2010/06/22

- URI.parse(x) can't do UTF-8, so working around...


== rufus-jig - 0.1.19    released 2010/05/14

- couch #nuke_design_documents to clean out [old/all] views


== rufus-jig - 0.1.18    released 2010/05/10

- couch #on_change to track continuous changes in a CouchDB databases


== rufus-jig - 0.1.17    released 2010/03/21

- using a new Patron::Session for each request (yes, they seem GC friendly)
- Rufus::Jig::Couch #path and #name methods


== rufus-jig - 0.1.16    released 2010/03/17

- Rufus::Jig::Couch returns true (was nil) when trying to put into a missing db


== rufus-jig - 0.1.15    released 2010/03/11

- unified :timeout => sec option and Rufus::Jig::TimeoutError
- fixed small issue with em-http-request and '/' path
- Ruote::Couch.new now passes options when doing Rufus::Jig::Http


== rufus-jig - 0.1.14    released 2010/02/25

- temporary fallback to net/http for Couch#attach and patron
- implemented Rufus::Jig::Couch#attach and #detach
  warning : Patron as of 0.4.5 is not OK with PUTting attachments


== rufus-jig - 0.1.13    released 2010/02/12

- implemented Rufus::Jig::Couch#post


== rufus-jig - 0.1.12    released 2010/01/13
