@@ -4,7 +4,8 @@
 
 == rufus-jig - 1.0.1    not yet released
 
-- couch #get('docname', :attchments => true)
+- couch #put and #bulk_put OK with attachments
+- couch #get('docname', :attachments => true)
 
 
 == rufus-jig - 1.0.0    released 2010/12/08
